--- a/platforms/ios/TryMRuby/TryMRuby-Info.plist
+++ b/platforms/ios/TryMRuby/TryMRuby-Info.plist
@@ -49,18 +49,18 @@
       </dict>
     </dict>
     <key>CFBundleIdentifier</key>
-    <string>com.todd.TryRuby</string>
+    <string>com.todd.TryMRuby</string>
     <key>CFBundleInfoDictionaryVersion</key>
     <string>6.0</string>
     <key>CFBundleName</key>
     <string>${PRODUCT_NAME}</string>
     <key>CFBundlePackageType</key>
     <string>APPL</string>
-    <key>CFBundleShortVersionString</key>
-    <string>1.0</string>
     <key>CFBundleSignature</key>
     <string>????</string>
     <key>CFBundleVersion</key>
+    <string>1.0</string>
+    <key>CFBundleShortVersionString</key>
     <string>1.0</string>
     <key>LSRequiresIPhoneOS</key>
     <true/>
@@ -68,6 +68,13 @@
     <string></string>
     <key>NSMainNibFile~ipad</key>
     <string></string>
+    <key>UISupportedInterfaceOrientations~ipad</key>
+    <array>
+      <string>UIInterfaceOrientationPortrait</string>
+      <string>UIInterfaceOrientationLandscapeLeft</string>
+      <string>UIInterfaceOrientationPortraitUpsideDown</string>
+      <string>UIInterfaceOrientationLandscapeRight</string>
+    </array>
     <key>UILaunchImages</key>
     <array>
       <dict>
@@ -170,15 +177,6 @@
         <key>UILaunchImageSize</key>
         <string>{768, 1024}</string>
       </dict>
-    </array>
-    <key>UIStatusBarHidden</key>
-    <true/>
-    <key>UISupportedInterfaceOrientations~ipad</key>
-    <array>
-      <string>UIInterfaceOrientationPortrait</string>
-      <string>UIInterfaceOrientationLandscapeLeft</string>
-      <string>UIInterfaceOrientationPortraitUpsideDown</string>
-      <string>UIInterfaceOrientationLandscapeRight</string>
     </array>
   </dict>
 </plist>
